<resources>
    <string name="version_actual">4.7.20</string>
    <string name="version_beta">+Versión para los Beta Tester</string>
    <string name="cambio_beta">
        -Pueden ayudarnos a dar soporte y aclarar dudas desde el grupo oficial de YouChat en telegram, el enlace está en \"acerca de\".
        -Ahora para sacar el cartel del Beta Tester
        hay que tener la calidad de imagen en 70% y desactivar la opción de notificaciones de la apk.\n
    </string>
    <string name="version_7">+Versión 4.7.20</string>
    <string name="cambio_7">
        -Implementado sistema de usuarios públicos.\n
        -Implementado filtro de búsqueda en el sistema de usuarios públicos.\n
        -Añadido nuevo sistema de descarga automática.\n
        -Implementada copia de seguridad en la nube.\n
        -Soporte para modificar esquinas de mensajes a gusto.\n
        -Añadido nuevos tipos de notificación.\n
        -Soporte de emojis animados.\n
        -Implementadas pantalla de soporte al recibir muchos errores.\n
        -Implementada bandeja de entrada para recibir todos los mensajes.\n
        -Implementadas opciones para la bandeja de entrada en ajustes.\n
        -Añadido soporte con los bots de DeltaChat.\n
        -Añadido apartado para ver seguidores y seguidos.\n
        -Añadido soporte para detectar errores en la aplicación, y poder reportarlos.\n
        -Mejorado las reacciones en los Now, ahora son más animadas.\n
        -Mejorado sistema de envío y recepción.\n
        -Ahora se detienen otros audios externos al grabar o reproducir algun sonido.\n
        -Mejorado deslizamiento en la pantalla de bienvenida y añadido botón de SALTAR.\n
        -Añadida opción para elegir la dirección al deslizar para responder un mensaje.\n
        -Añadida opción para desenfocar los fondos de pantalla.\n
        -Añadida opción de establecer fondos al crear un tema.\n
        -Implementado sistema para recibir noticias y actualizaciones desde el chat oficial de YouChat.\n
        -Implementado sistema de post diarios.\n
        -Añadida opción de crear tarjetas en los post y enviar imágenes.\n
        -Añadida opción de enviar imágenes en los post.\n
        -Añadida opción de compartir temas en los post.\n
        -Añadida opción para responder en los post.\n
        -Aumentado a 500 los caracteres en los post.\n
        -Implementado sistema para reportar errores en la apk.\n
        -Añadida opción para limitar la cantidad de Post recibidas.\n
        -Añadida opción de lista negra para los Post.\n
        -Implementado sistema de calificación de usuario según la cantidad de seguidores.\n
        -Añadida función para compartir la lista de seguidores.\n
        -Ocultada lista de correos en mensajes con más de un destinatario.\n
        -Implementada función para ir atrás deslizando de izquierdo a derecha.\n
        -Aumentada velocidad de envío de mensajes.\n
        -Soporte creado para personalizar la app a gusto.\n
        -Añadidos algunos temas por defecto.\n
        -Implementada función para compartir los temas.\n
        -Añadida opción para redondear barra de chat a gusto.\n
        -Añadida opción para escoger la cantidad de líneas en la lista de chat.\n
        -Añadida opción para enviar mensajes al pulsar la tecla Intro.\n
        -Añadida función de descargas gratis de stickers.\n
        -Implementada función para encriptar los mensajes que se envían.\n
        -Mejorado el sistema de envío y recepción de stickers.\n
        -Añadida la compatibilidad de sticker con tgs, jpg, jpeg, png, gif y webp, podrás usar los sticker de Telegram y WhatsApp.\n
        -Mejorado sistema de descargas.\n
        -Implementada función de autoenviar todos los mensajes que no se enviaron apenas se conecte.\n
        -Añadido apartado \"Estadísticas\" para hacer seguimiento del consumo.\n
        -Añadidos gráficos a las estadísticas.\n
        -Añadida burbuja de datos para ver el consumo en tiempo real.\n
        -Implementada función para editar mensajes después de haber sido enviados.\n
        -Mejorado visor de imágenes.\n
        -Mejorado dimensiones del contenedor de imágenes en el chat.\n
        -Mejorado sistema de responder mensajes.\n
        -Añadida función de selección múltiple en el chat.\n
        -Añadida función de reenvío múltiple de mensajes.\n
        -Cambiado nombre \"Estados\" por \"Now\", contribución de Roclahy admin de iTecnoGeek.\n
        -Implementado sistema para recibir Now oficiales de YouChat.\n
        -Implementada función para saber quien vió tu Now.\n
        -Mejorado visor de Now.\n
        -Añadida barra de progreso al subir un Now para saber si se envía correctamente y cuanto demora.\n
        -Añadida función de subida múltiple de Now.\n
        -Añadida función de copiar y resubir un Now.\n
        -Incorporado gestor de archivos.\n
        -Mejorado sistema de subida de archivos.\n
        -Mejorado sistema al abrir archivos.\n
        -Implementado sistema para escuchar audio al acercarlo al oido.\n
        -Mejorado la reproducción de audios.\n
        -Mejora visual de la barra de audio.\n
        -Implementado resaltado de texto al concatenarlo con \"#\".\n
        -Arreglado error de imágenes en negro al seleccionarlas desde el carrusel.\n
        -Arreglado errores de incompatibilidad con la cámara del chat.\n
        -Cambio total de iconografía.\n
        -Cambio total en la infraestructura.\n
        -Añadido fondo de pantalla actual en el apartado ver perfil.\n
        -Corregido fallo de fotos de perfil repetidas en chats.\n
        -Corregidos otros errores.\n
    </string>
    <string name="version_6">+Versión 4.3.08</string>
    <string name="cambio_6">
        -Mejorado el trabajo en segundo plano.\n
        -Implementado cambio de temas.\n
        -Añadida opciones de personalización del chat.\n
        -Opción para aumentar el tamaño de las letras de los mensajes.\n
        -Añadida primera versión de stickers (beta).\n
        -Añadida copia de seguridad para respaldar sus datos.\n
        -Implementada función de borrar mensajes para todos.\n
        -Añadido soporte para más correos internacionales (en prueba, puede tener errores).\n
        -Implementada cámara propia en la app.\n
        -Añadido efecto para abrir cámara desde el chat.\n
        -Mejorado visualmente el sistema de grabar mensaje de voz.\n
        -Mejorado forma de abrir el clip de adjuntar.\n
        -Añadido carrusel de imágenes en el clip de adjuntar.\n
        -Añadidas imágenes y animaciones en carteles de información, por ejemplo al anclar, silenciar o grabar.\n
        -Separado por tabs los estados de la conversación principal.\n
        -Añadida función de borrar cada 24h los estados.\n
        -Rediseñado componentes de estados.\n
        -Mejoras en el visor de estados.\n
        -Añadida función de girar la pantalla para usar la aplicación en modo paisaje.\n
        -Añadidas animaciones para las tarjetas de felicitaciones en fechas puntuales.\n
        -Nueva tematización estándar de la aplicación.\n
        -Mejorado el slider de calidad de imágenes y de tamaño máximo de descarga en ajustes.\n
        -Mejorado el sistema de descarga de mensajes.\n
        -Rediseñadas algunas secciones.\n
        -Añadidos nuevos fondos de pantalla.\n
        -Mejorado tema oscuro y errores en el mismo.\n
        -Corregido errores menores.\n
        Gracias por el apoyo brindado al desarrollo de la app, gracias por la paciencia y por preferir a YouChat para comunicarse.\n
        \#Vamos_por_más
    </string>
    <string name="version_5">+Versión 4.1.12</string>
    <string name="cambio_5">
        -Implementados los estados y un sistema de seguidores.\n
        -Añadidas reacciones a los estados.\n
        -Aumentada la velocidad al enviar y recibir mensajes.\n
        -Añadida la opción de ver a todas las personas bloqueadas.\n
        -Añadida estadística dentro del perfil de cada usuario.\n
        -Añadida función de \"Seguir\" o \"Ir a chat\" tocando un correo desde fuera de la aplicación.\n
        -Corregido el error de la opción \"Aviso en línea\".\n
        -Corregido el error al intentar poner un fondo de la galería.\n
        -Disminuido el tamaño mínimo de descarga automática a 50Kb.\n
        -Añadida la opción manual de elegir si quieres avisar a tus contactos que te has unido a YouChat.\n
        -Corregidos algunos errores.\n
        -Realizadas algunas mejoras visuales.\n
    </string>
    <string name="version_4">+Versión 4.0.06</string>
    <string name="cambio_4">
        -Por problemas en la versión anterior se desactivó el trabajo en segundo plano, si eres uno de los
        usuarios afectados por favor, no actives esta opción por ahora.\n
        -Se arregló el error del login de la versión anterior.\n\n
        Disculpen las molestias ocasionadas.
    </string>
    <string name="version_3">+Versión 4.0.05</string>
    <string name="cambio_3">
        -Cambio total en el diseño de la aplicación y nuevo ícono.\n
        -Ahora la aplicación trabaja en segundo plano.\n
        -Habilitado un sólo toque para acceder a las opciones de los mensajes dentro del chat.\n
        -Añadida opción de avisar a tus contactos de YouChat que te has conectado.\n
        -Habilitada la función de avisar a todos tus contactos de que usas YouChat la primera vez que te conectas.\n
        -Añadida la función de acceder desde un correo directamente al chat de la aplicación.\n
        -Añadida la opción de empezar una conversación sin necesidad de agregar el correo a tus contactos del teléfono.\n
        -Añadida la opción de limitar el tamaño máximo de descarga automática de los mensajes.\n
        -Añadida la opción de descargar los mensajes manualmente si sobrepasan el límite de tamaño establecido.\n
        -Aumentado el límite de envío de archivos hasta 20Mb.\n
        -Ahora los perfiles se actualizan sin necesidad de agregar el contacto al teléfono.\n
        -Ahora puedes escribirte a ti mismo para almacenar mensajes, estos correos no se enviarán.\n
        -Añadido mensaje \"Conectando\".\n
        -Añadidas algunas mejoras visuales.\n
        -Arreglados algunos errores.\n
        -Añadidas otras sorpresas.\n\n
        Agradecer a todo aquel que nos hizo llegar su idea para mejorar la aplicación.
    </string>
    <string name="version_2">+Versión 3.0.47</string>
    <string name="cambio_2">
        -Ahorro sustancial de datos.\n
        -Aumentada la calidad de la foto de perfil.\n
        -Añadida función de enviar tarjetas.\n
        -Añadido mensaje \"Actualizando\".\n
        -Añadidos nuevos fondos de pantalla para el chat.\n
        \nFeliz fin de año y próspero año nuevo para todos.
    </string>
    <string name="version_1">+Versión 3.0.01</string>
    <string name="cambio_1">
        -Corregido error al abrir la cámara para android 7 en adelante.\n
        -Añadida notificación de \"escribiendo...\" y \"grabando audio\" dentro y fuera del chat.\n
        -Implementada la función de enviar archivos de hasta 5Mb.\n
        -Implementada la función de enviar contactos.\n
        -Integrada la lista de contactos de YouChat con la lista de contactos del teléfono.\n
        -Añadido \"Borrador\" al salir de las conversaciones y dejar algo escrito.\n
        -Añadido mensaje \"Conectando\".\n
        -Añadida opción de desactivar animaciones en el chat.\n
        -Añadido peso de las imágenes.\n
        -Añadidos paneles de confirmación a las opciones de bloquear y silenciar.\n
        -Añadidos nuevos fondos de pantalla para el chat.\n
        -Añadido soporte para GIF en el fondo de pantalla para el chat.\n
        -Realizadas algunas reformas visuales.\n
        -Arreglados varios bugs y corregido algunos errores.\n\n
        Muchas gracias a todos los usuarios que nos hicieron llegar su sugerencia
        a través de los distintos medios disponibles.
    </string>
</resources>